force-app/main/default/objects/AOB_FlowScreen__c/AOB_FlowScreen__c.object-meta.xml
<CustomObject>
    <label>Flow screen</label>
    <nameField>
        <label>Flow screen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flow screens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>