force-app/main/default/objects/AOB_FlowScreen__c/fields/AOB_largeDeviceColumns__c.field-meta.xml
<CustomField>
    <fullName>AOB_largeDeviceColumns__c</fullName>
    <inlineHelpText>Number of form columns to display in a large device ( eg: Desktop)</inlineHelpText>
    <label>Large device columns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>