force-app/main/default/objects/AOB_FlowScreen__c/fields/AOB_mediumDeviceColumns__c.field-meta.xml
<CustomField>
    <fullName>AOB_mediumDeviceColumns__c</fullName>
    <description>Number of form columns to display in a medium device ( eg: Tablet)</description>
    <label>medium Device Columns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>