force-app/main/default/objects/AOB_FlowScreen__c/fields/AOB_smallDeviceColumns__c.field-meta.xml
<CustomField>
    <fullName>AOB_smallDeviceColumns__c</fullName>
    <inlineHelpText>Number of form columns to display in a small device ( eg: phone)</inlineHelpText>
    <label>small Device Columns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>