force-app/main/default/objects/AOB_FlowScreen__c/fields/AOB_subtitle__c.field-meta.xml
<CustomField>
    <fullName>AOB_subtitle__c</fullName>
    <label>subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>