force-app/main/default/objects/AOB_FlowScreen__c/fields/AOB_title__c.field-meta.xml
<CustomField>
    <fullName>AOB_title__c</fullName>
    <label>title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>