force-app/main/default/objects/AOB_FlowScreen__c/fields/AOB_TitleApplicationField__c.field-meta.xml
<CustomField>
    <fullName>AOB_TitleApplicationField__c</fullName>
    <inlineHelpText>Put here the Application&apos;s API field name ( value in the title should be {####}, and will be automatically replaced by the value in the application record for the field mentioned here)</inlineHelpText>
    <label>Title Dynamic value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>